# foerdermittel-navigator

./: .gitignore  HANDOVER.md  Makefile  README.md  STATUS.md
.github/workflows/: deploy-preview.yml
btc-ordinals-tax/: .gitignore  README.md  pyproject.toml
btc-ordinals-tax/src/btc_tax/: __init__.py  fetch_esplora.py  normalize.py  ordinals_detect.py  parse_tx.py  types.py
btc-ordinals-tax/tests/: test_golden_metadata.py
btc-ordinals-tax/tests/fixtures/: tx_overrides.json
btc-ordinals-tax/tools/: analyze_tx.py  fetch_tx_fixtures.py
data/: foerderprogramme.csv  kriterien_matrix.csv  link_exceptions.csv  update_log.csv
docs/: changed_link_health_snapshot.md  coverage_snapshot.md  data_gaps.md  deadline_snapshot.md  info_link_overlap.md  link_quality_snapshot.md  link_structure_snapshot.md  live_link_health_snapshot.md  live_log.md  master_coverage.md  open_calls.md  qa_commands.md  qm_policy.md  quellen.md  roadmap.md  scope_matrix.md  template.md  top20_offene_calls.md  update_process.md  url_sanity_snapshot.md
docs/preview/: app.js  index.html  styles.css
scripts/: check_changed_links_gate.py  check_deadlines.py  report_coverage.py  report_deadlines.py  report_gaps.py  report_info_link_overlap.py  report_link_quality.py  report_link_structure.py  report_live_link_health.py  report_master_coverage.py  report_open_calls.py  report_scope_matrix.py  report_status.py  report_url_sanity.py  run_monthly_batch.sh  run_qa.sh  validate_foerderprogramme.py
